# naviate

./: .gitlab-ci.yml  .lintstagedrc.js  LICENSE.md  LICENSE_MIT.md  README.md  package.json  rustfmt.toml
client/: README.md  config-overrides.js  gitlab-ci.yml  package-lock.json  package.json
client-next/: next.config.js  package.json
client-next/.storybook/: main.js  preview.tsx
client-next/scripts/: build.sh
client-next/src/e6b/: interface.ts
client-next/src/pages/: _app.tsx  index.tsx
client-next/src/state/: store.ts
client/.storybook/: main.js  manager.js  preview.js  preview.tsx
client/gitlab/workflows/: build.yml  deploy.yml
client/native/e6b/: Cargo.toml
client/native/scripts/: build.sh  build_requirements.sh
client/public/: browserconfig.xml  index.html  site.webmanifest
client/scripts/: build  build.sh  deploy_storybook  install  install.sh  install_requirements  install_requirements.sh
client/src/: App.tsx  index.css  index.tsx
client/src/app/: api.ts  app.tsx  localStorage.ts  routes.tsx  store.ts
client/src/atis/: d_atis_slice.ts  (+3 more)
d_atis/: Dockerfile  Procfile  gitlab-ci.yml  ormconfig.js  package.json  tsconfig.json
d_atis/scripts/: deploy  dockerize
d_atis/src/: pubsub.ts
scds_d_atis_pubsub/: ormconfig.js  package.json  sample.env
scds_d_atis_pubsub/src/: app.ts  db_connection.ts
server/: .gitlab-ci.yml  Cargo.toml  Dockerfile  gitlab-ci.yml
server/.github/workflows/: deploy.yml  docker.yml
server/.gitlab/workflows/: build.yml  docker.yml  test.yml
server/crates/api/: Cargo.toml
server/crates/api/src/: cors.rs  main.rs  version.rs
server/crates/api/src/d_atis/: routes.rs
server/crates/api/src/routes/: d_atis.rs  metar.rs  mod.rs  taf.rs
server/crates/avwx/: Cargo.toml
server/crates/avwx/src/: lib.rs  metar.rs  parse_metar.rs  parse_taf.rs  taf.rs
server/crates/d-atis/: Cargo.toml
server/crates/d-atis/src/: external.rs  lib.rs  parse_external.rs
server/docs/: core.yaml
server/gitlab/workflows/: build.yml  deploy.yml  docker.yml  test.yml
server/scripts/: build_alpine  deploy_alpine  deploy_documentation  share_docker_musl
server/src/: datis.rs  main.rs
server/src/d_atis/: routes.rs  service.rs
server/src/datis/: routes.rs  service.rs
(+135 files in other folders)
