[package]
name = "naviate-server"
version = "0.1.0"
authors = ["Eigently <eigentlydev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = "1.0"
actix-web = "3"
log = "0.4"
env_logger = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "json"] }
