[package]
name = "naviate-api"
version = "0.1.0"
authors = ["Eigently <eigentlydev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0"
actix-web = "4.0.0-beta"
actix-cors = "0.6.0-beta"
serde = "1.0"
log = "0.4"
env_logger = "0.8"
naviate-d-atis = { path="../d-atis" }
naviate-avwx = { path="../avwx" }
