[package]
name = "naviate-d-atis"
version = "0.1.0"
authors = ["Eigently <eigentlydev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
reqwest = { version="0.11", default-features=false, features=["blocking", "rustls-tls", "json"] }
log = "0.4"
